[package]
name = "gc_"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
documentation = "https://github.com/sugiura-hiromichi/gc"
homepage = "https://github.com/sugiura-hiromichi/gc"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sugiura-hiromichi/gc"
description = "my personal shorthand of git clone"

[dependencies]
anyhow = "1"
sugiura-hiromichi_mylibrary = "1"
