[package]
name = "gc_"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
documentation = "https://github.com/sugiura-hiromichi/gc"
homepage = "https://github.com/sugiura-hiromichi/gc"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sugiura-hiromichi/gc"
description = "my personal shorthand of git clone"

[dependencies]
anyhow = "1"
mylibrary_ = "1"
